@@ -33,12 +33,13 @@ void on_about_activate (GtkMenuItem *menuitem, gpointer user_data);
 void on_menuscanhome_activate (GtkMenuItem *menuitem, gpointer user_data);
 void on_menuallfs_activate (GtkMenuItem *menuitem, gpointer user_data);
 void on_menuscandir_activate (GtkMenuItem *menuitem, gpointer user_data);
+void on_menu_stop_activate (GtkMenuItem *menuitem, gpointer user_data);
+void on_menu_rescan_activate (GtkMenuItem *menuitem, gpointer user_data);
 void on_tbscandir_clicked (GtkToolButton *toolbutton, gpointer user_data);
-void on_tbstop_clicked (GtkToolButton *toolbutton, gpointer user_data);
-void on_tbsortalfa_clicked (GtkToolButton *toolbutton, gpointer user_data);
-void on_tbsortnum_clicked (GtkToolButton *toolbutton, gpointer user_data);
 void on_tbscanhome_clicked (GtkToolButton *toolbutton, gpointer user_data);
 void on_tbscanall_clicked (GtkToolButton *toolbutton, gpointer user_data);
+void on_tbstop_clicked (GtkToolButton *toolbutton, gpointer user_data);
+void on_tbrescan_clicked (GtkToolButton *toolbutton, gpointer user_data);
 void on_radio_allfs_clicked (GtkButton *button, gpointer user_data);
 void on_radio_dir_clicked (GtkButton *button, gpointer user_data);
 void on_esci1_activate (GtkObject *object, gpointer user_data);
