@@ -1,3 +1,13 @@
+2006-10-28  Paolo Borelli  <pborelli@katamail.com>
+
+	* data/baobab.glade:
+	* data/baobab:
+	* src/baobab-utils.c:
+	* src/callbacks.c:
+
+	Add a 'Refresh' action. (bug #365086, reported by
+	Matthias Clasen, first patch by Emmanuele Bassi)
+
 2006-10-24  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* pixmaps/Makefile.am:
